[package]
name = "chopstick"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
ladle = { version = "0.1", path = "../" }
clap = "~2.27.0"
serde_json = "~1.0.89"
tokio = { version = "1", features = ["full"] }
log = "0.4.0"

[dependencies.simple_logger]
version = "4.0.0"
features = ["stderr"]
