[package]
name = "chopstick"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13.3"
dirs = "4.0.0"
futures = "0.3"
indicatif = "0.17.2"
ladle = { version = "0.1", path = "../" }
log = "0.4.0"
serde_json = "~1.0.89"
tokio = { version = "1", features = ["full"] }
unidecode = "0.3.0"
serde = "1.0.152"
clap = { version = "4.1.1", features = ["derive"] }

[dependencies.simple_logger]
version = "4.0.0"
features = ["stderr"]
